--- a/Exploring-unpublished-works-entering-public-domain.ipynb
+++ b/Exploring-unpublished-works-entering-public-domain.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4  https://trove.nla.gov.au/work/152218670  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
     "\n",
     "params = {\n",
     "    'encoding': 'json',\n",
-    "    'key': '6pi5hht0d2umqcro'\n",
+    "    'key': 'ADD YOUR API KEY HERE'\n",
     "}\n",
     "\n",
     "for nuc in nuc_list:\n",
