--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0846ec6b",
+   "id": "6c81f256",
    "metadata": {},
    "source": [
     "# Trove diaries, letters and archives\n",
@@ -24,18 +24,18 @@
     "Datasets:\n",
     "\n",
     "* Unpublished works that might be entering the public domain on 1 January 2019 &ndash; [Download CSV file  (1.8mb)](https://github.com/GLAM-Workbench/trove-unpublished/blob/master/unpublished_works_entering_pd_20181006.csv)\n",
-    "* [`finding-aids-totals.csv`](https://github.com/GLAM-Workbench/nla-finding-aids-data/blob/main/finding-aids.csv) – list of urls for NLA digitised finding aids \n",
+    "* [`finding-aids.csv`](https://github.com/GLAM-Workbench/nla-finding-aids-data/blob/main/finding-aids.csv) – list of urls for NLA digitised finding aids \n",
     "* [`finding-aids-totals.csv`](https://github.com/GLAM-Workbench/nla-finding-aids-data/blob/main/finding-aids-totals.csv) – summary information describing NLA digitised finding aids"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ae214c97",
+   "id": "f075cd87",
    "metadata": {},
    "source": [
     "## Cite as\n",
     "\n",
-    "See the GLAM Workbench or [Zenodo](https://doi.org/10.5281/zenodo.3549403) for up-to-date citation details.\n",
+    "See the GLAM Workbench or [Zenodo](https://doi.org/10.5281/zenodo.3549343) for up-to-date citation details.\n",
     "\n",
     "----\n",
     "\n",
